src/test/deca/syntax/invalid/resultats/test42_method-synt.res
./src/test/deca/syntax/invalid/test42_method.deca:17:6: missing '(' at '"test"'
